Fix: Authentication error
Handle 401 errors when accessing the API.